# data-analytics-project-100

./: README.md  ads.json  conversion.json  hexlet_notebook.ipynb
hexlet-code/: ads.json  pyproject.toml
hexlet-code/charts_project/: main.py
hexlet-code/hexlet_code/: main.py
